--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,14 @@
 	ui = auto
 [push]
 	default = simple
+# # for darwin
+# [http "https://github.com"]
+#     proxy = socks5://127.0.0.1:1086
+# [https "https://github.com"]
+#     proxy = socks5://127.0.0.1:1086
+
+# # for windows
+# [http "https://github.com"]
+#     proxy = socks5://127.0.0.1:1080
+# [https "https://github.com"]
+#     proxy = socks5://127.0.0.1:1080
