--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://registry.npm.taobao.org/
+registry=https://registry.npmmirror.com
 init.author.name=richardo2016
 init.author.email=richardo2016@gmail.com
